fixed horizontal scrolling issue

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -4,6 +4,7 @@
 html, body {
     width: 100%;
     height: 100%;
+    overflow-x:hidden;
 }
 
 body {
@@ -31,13 +32,13 @@ body {
     #left-col-head{display:table-row-group;}
 }
 
-/*
+
 @media (max-width:400px){
     .portfolio-item img{
         max-width:100px;
     }
 }
-*/
+
 @media (max-width:900px){
     .portfolio-item img{
         max-width:150px;
